# somix

./: .domains  .gitignore  .woodpecker.yml  404.html  Cargo.toml  Dockerfile  LICENSE  README.md  Trunk.toml  build.ps1  build.sh  index.html  matrix-social-113c5ca549ed0ec6.js  matrix-social-113c5ca549ed0ec6_bg.wasm  matrix-social-18cf6fa007043ecd.js  matrix-social-205b390d5eb192b5.js  matrix-social-205b390d5eb192b5_bg.wasm  matrix-social-284c0aa00e0808d4.js  matrix-social-284c0aa00e0808d4_bg.wasm  matrix-social-3bf14bf6a9ebe0d0.js  matrix-social-3bf14bf6a9ebe0d0_bg.wasm  matrix-social-40727777ddfe4fb3.js  matrix-social-40727777ddfe4fb3_bg.wasm  matrix-social-4b188d0752c6dac3.js  matrix-social-4b188d0752c6dac3_bg.wasm  matrix-social-4b2bdae837d0e9be.js  matrix-social-4e10712e66cccb12.js  matrix-social-4f07e99a0a9fd57d.js  matrix-social-5d148319ef0395a2.js  matrix-social-5d148319ef0395a2_bg.wasm  matrix-social-60715737350294c1.js  matrix-social-643ae7739afd2165.js  matrix-social-643ae7739afd2165_bg.wasm  matrix-social-6cbc8c629deb3c9a.js  matrix-social-6f99e4906c1d54c2.js  matrix-social-6f99e4906c1d54c2_bg.wasm  matrix-social-71bbdfee2e83e507.js  matrix-social-71bbdfee2e83e507_bg.wasm  matrix-social-837d8a8e6a04a7b0.js  matrix-social-837d8a8e6a04a7b0_bg.wasm  (+41 more)
assets/: mobile-menu.js
src/: client.rs  lib.rs  main.rs  tailwind.css
src/components/: alias.rs  compose.rs  event.rs  feed.rs  login.rs  mod.rs  nav.rs  new.rs  post.rs  room.rs  room_selector.rs  text_input.rs  wordmark.rs
src/components/atoms/: guest.rs  mod.rs  nav.rs  user.rs
src/components/molecules/: nav.rs
src/store/: user.rs
