[package]
name = "matrix-social"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.2.3"
reqwest-wasm = "0.11.15"
serde = "1.0.147"
serde_json = "1.0.88"
yew = "0.19.3"
yew-hooks = "0.1.56"
yewdux = "0.8.3"
