[package]
name = "matrix-social"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.2.3"
gloo-storage = "0.2.2"
matrix-sdk = { version="0.6.2", features=["js", "rustls-tls"], default-features=false }
serde_json = "1.0.89"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = { version="0.3.60", features=["HtmlInputElement"] }
yew = { version="0.20.0", features=["csr"] }
yew-hooks = "0.2.0"
yew-router = "0.17.0"
